; ModuleID = '/home/carl/AnghaBench/sumatrapdf/ext/lcms2/testbed/extr_testcms2.c_TestSingleFixed15_16.c'
source_filename = "/home/carl/AnghaBench/sumatrapdf/ext/lcms2/testbed/extr_testcms2.c_TestSingleFixed15_16.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@FIXED_PRECISION_15_16 = common dso_local global i64 0, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i64)* @TestSingleFixed15_16 to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @TestSingleFixed15_16(i64 %0) #0 {
  %2 = alloca i64, align 8
  %3 = alloca i32, align 4
  %4 = alloca i64, align 8
  %5 = alloca i64, align 8
  store i64 %0, i64* %2, align 8
  %6 = call i32 (...) @DbgThread()
  %7 = load i64, i64* %2, align 8
  %8 = call i32 @_cmsDoubleTo15Fixed16(i32 %6, i64 %7)
  store i32 %8, i32* %3, align 4
  %9 = call i32 (...) @DbgThread()
  %10 = load i32, i32* %3, align 4
  %11 = call i64 @_cms15Fixed16toDouble(i32 %9, i32 %10)
  store i64 %11, i64* %4, align 8
  %12 = load i64, i64* %2, align 8
  %13 = load i64, i64* %4, align 8
  %14 = sub nsw i64 %12, %13
  %15 = call i64 @fabs(i64 %14)
  store i64 %15, i64* %5, align 8
  %16 = load i64, i64* %5, align 8
  %17 = load i64, i64* @FIXED_PRECISION_15_16, align 8
  %18 = icmp sle i64 %16, %17
  %19 = zext i1 %18 to i32
  ret i32 %19
}

declare dso_local i32 @_cmsDoubleTo15Fixed16(i32, i64) #1

declare dso_local i32 @DbgThread(...) #1

declare dso_local i64 @_cms15Fixed16toDouble(i32, i32) #1

declare dso_local i64 @fabs(i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
